syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "PriceObserver.Web.Shared.Grpc";

package Items;

service ItemsReception {
  rpc Receive (google.protobuf.Empty) returns (ItemsReceptionReply);
}

message ItemsReceptionReply {
  repeated ShopItemsResponseModel Data = 1;
}

message ShopItemsResponseModel {
  ShopResponseModel shop = 1;
  repeated ItemResponseModel items = 2;
}

message ShopResponseModel {
  string address = 1;
  string logo = 2;
  string currencySign = 3;
  bool sameFormatImages = 4;
}

message ItemResponseModel {
  int32 id = 1;
  string title = 2;
  int32 price = 3;
  string url = 4;
  string imageUrl = 5;
  string priceChanges = 6;
}
